--- a/views/index.erb
+++ b/views/index.erb
@@ -19,28 +19,22 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">RofL</a>
+          <a class="navbar-brand" href="#">Champion Power Curves</a>
         </div>
         <div class="navbar-collapse collapse">
         </div>
       </div>
     </div>
 
-    <div class="jumbotron">
-      <div class="container">
-        <h3>Champion power curves</h3>
-      </div>
-    </div>
-
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-5 panel panel-default">
+          <div class="panel-body">
           <table class="table table-bordered">
             <thead>
               <tr>
                 <th></th>
                 <th class="red">Champion1</th>
-                <th>vs</th>
                 <th class="blue">Champion2</th>
               </tr>
             </thead>
@@ -54,7 +48,6 @@
                     <% end %>
                   </select>
                 </td>
-                <td></td>
                 <td>
                   <select class="form-control" id="champion2">
                     <% @champions.each do |champion| %>
@@ -72,7 +65,6 @@
                     <span class="perlevel">(+<span id="champion1_<%=property[0]%>perlevel"></span>)</span>
                   <% end %>
                 </td>
-                <td></td>
                 <td>
                   <span id="champion2_<%=property[0]%>"></span>
                   <% if property[2] %>
@@ -84,24 +76,34 @@
             </tbody>
           </table>
         </div>
-        <div class="col-md-6">
-          <% @charts.each do |(attribute, name)| %>
-          <div class="row">
-            <h3><%=name%></h3>
-            <canvas id="<%=attribute%>" width="500" height="200"></canvas>
+          <div class="panel-footer" id="footer">
+            <span class="text-muted">&copy; Friday Inc. <%= Time.now.year %> Data Patch Version: <%= @patch %></span>
           </div>
+        </div>
+        <div id="charts" class="col-md-6 col-md-offset-1 panel panel-info">
+          <ul class="nav nav-tabs">
+            <% @charts.each_pair do |(key, _)| %>
+              <li><a href="#<%=key.downcase%>" class="<%=key=='AD' ? 'active' : ''%>" data-toggle="tab"><%=key%></a></li>
+            <% end %>
+          </ul>
+
+          <div class="tab-content">
+            <% @charts.each_pair do |(key, charts)| %>
+              <div class="tab-pane <%=key=='AD' ? 'active' : ''%>" id="<%=key.downcase%>">
+              <% charts.each do |(attribute, name)| %>
+                <h3><%=name%></h3>
+                <canvas id="<%=name.downcase%>_chart" width="500" height="200"></canvas>
+            <% end %>
+            </div>
           <% end %>
         </div>
       </div>
-      <div class="footer">
-        <p>&copy; Friday Inc. <%= Time.now.year %> Data Patch Version: <%= @patch %></p>
-      </div>
-
     </div>
+  </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
-    <script src="js/main.js"></script>
+    <script src="/main.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script src="js/chart.min.js"></script>
   </body>
